Mon Sep 19 06:41:32 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb: backported from trunk (rev 1.65):

	* lib/fileutils.rb (rm_r): new option :secure.

	* lib/fileutils.rb (rm_rf): new option :secure.

	* lib/fileutils.rb: new method #remove_entry_secure.

	* lib/fileutils.rb (cd): remove option :noop.

	* lib/fileutils.rb (cp_r): new option :dereference_root.

	* lib/fileutils.rb (cp_r): new option :dereference_root.

	* lib/fileutils.rb: new method #remove_entry.

	* lib/fileutils.rb: new method #chmod_R.

	* lib/fileutils.rb: new method #chown.

	* lib/fileutils.rb: new method #chown_R.

	* lib/fileutils.rb: new method .commands.

	* lib/fileutils.rb: new method .options.

	* lib/fileutils.rb: new method .have_option?.

	* lib/fileutils.rb: new method .options_of.

	* lib/fileutils.rb: new method .collect_method.

	* lib/fileutils.rb: use module_function instead of single extend.

	* test/fileutils/test_fileutils.rb: backported from trunk (1.36).

Mon Sep 19 03:17:48 2005  Tanaka Akira  <akr@m17n.org>

	* file.c (rb_thread_flock): wrap the flock system call by
	  TRAP_BEG/TRAP_END to enable signals.  [ruby-dev:27122]

	* ext/socket/socket.c (bsock_send): wrap the sendto and send system
	  call by TRAP_BEG/TRAP_END to enable signals when writing to a socket
	  which is full.  [ruby-dev:27132]

	* io.c (rb_io_syswrite): wrap the write system call by
	  TRAP_BEG/TRAP_END to enable signals when writing to a pipe which is
	  full.  [ruby-dev:27134]

Mon Sep 19 03:02:08 2005  Tanaka Akira  <akr@m17n.org>

	* io.c (io_fwrite): wrap the write system call by TRAP_BEG/TRAP_END to
	  enable signals when writing to a pipe which is full. 

Sun Sep 18 02:10:47 2005  why the lucky stiff  <why@ruby-lang.org>

	* lib/yaml/rubytypes.rb: remove comments that are bungling up
	  the rdoc and ri output.  output symbols as plain scalars.  

	* ext/syck/rubyext.c (syck_emitter_reset): emit headless 
	  documents always.
