@@ -1,3 +1,13 @@
+Mon Sep 19 07:45:37 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>
+
+	* ext/openssl/ossl_pkey.h, ossl_pkey_rsa.c, ossl_pkey_dsa.c:
+	  an instance variable "private" is added to OpenSSL::PKey class.
+	  this ivar is a flag that shows whether there is a private key
+	  in the instance.
+
+	* ext/openssl/ossl_engine.c: (ossl_engine_load_privkey): set private
+	  key flag.
+
 Mon Sep 19 06:41:32 2005  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/fileutils.rb: backported from trunk (rev 1.65):
